# WheyUI

./: CMakeLists.txt  Main.qml  main.cpp
Ui/: CustomSwitch.qml  WindowContent.qml
Ui/AppLayout/: OneAppLayout.qml  ThreeAppsLayout.qml  TwoAppsLayout.qml
Ui/Apps/MapsApp/: MapsApp.qml
Ui/Apps/SettingsApp/: SettingsApp.qml
Ui/Apps/SettingsApp/ContentPages/: ConnectionsContent.qml  ControlsContent.qml  SoftwareContent.qml
Ui/Bar/: Bar.qml  TopBar.qml
